2010-07-29  Juanma Barranquero  <lekktu@gmail.com>

	* make-docfile.c (write_c_args): Warn for old-style empty arglist ().

2010-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (getcwd): Fix previous change: make getcwd
	conditional on HAVE_GETCWD and declare with the correct POSIX
	profile (for some reason MinGW headers define its 2nd arg as int,
	not size_t; but getcwd is not used on Windows nonetheless).

2010-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (getcwd, w32_getenv):
	* ntlib.h (getlogin, getuid, getegid, getgid): Fix prototypes.

2010-07-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* update-game-score.c (usage): Add NO_RETURN specifier.
	* movemail.c (fatal, pfatal_with_name, pfatal_and_delete):
	* make-docfile.c (fatal):
	* hexl.c (usage):
	* fakemail.c (fatal):
	* etags.c (fatal, suggest_asking_for_help, pfatal):
	* emacsclient.c (fatal):
	* b2m.c (fatal): Likewise.

2010-07-23  Juanma Barranquero  <lekktu@gmail.com>

	* make-docfile.c (write_c_args): Correctly handle prefixes of "defalt".

2010-07-20  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (get_current_dir_name, w32_get_resource)
	(w32_getenv, w32_set_user_model_id, w32_window_app, w32_execvp)
	(close_winsock, initialize_sockets, w32_find_emacs_process)
	(w32_give_focus):
	* ntlib.c (getlogin, getuid, getgid, getegid):
	Convert definitions to standard C.

2010-07-12  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (C_WARNINGS_SWITCH, PROFILING_CFLAGS)
	(PROFILING_LDFLAGS): Set from substitution.
	(BASE_CFLAGS): Add  ${C_WARNINGS_SWITCH}.
	(ALL_CFLAGS, CPP_CFLAGS): Add ${PROFILING_CFLAGS}.
	(LINK_CFLAGS): Add ${PROFILING_LDFLAGS}.

2010-07-12  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (lisp2): Change hebrew.el to hebrew.elc (see
	revno 100789).

2010-07-11  Andreas Schwab  <schwab@linux-m68k.org>

	* emacsclient.c (set_local_socket): Use strchr, strrchr instead of
	index, rindex.
	* movemail.c (mail_spool_name, popmail): Likewise.